# keyboard

./: CMakeLists.txt  Keyboard.sln  Keyboard.vcxproj  Keyboard.vcxproj.filters  README.txt  config  imgui.ini  keyboard.cpp  midi.hpp  pch.hpp  winmidi.hpp
Source/: Chord.hpp  Main.cpp  pch.hpp
Source/MIDI/: ImplWinMIDI2.hpp  ImplWinMM.hpp  ImplWinRT.hpp  MIDI.hpp
Source/MIDI/Data/: GM.hpp
contrib/imtui/src/: imtui-impl-ncurses.cpp
imtui/src/: CMakeLists.txt
src/: chord.hpp  keyboard.cpp  main.cpp  midi.hpp  pch.hpp
src/midi/: impl_winmm.hpp  impl_winrt.hpp  midi.hpp
src/midi/data/: gm.hpp
